--- a/src/sass/mail/mail-one.scss
+++ b/src/sass/mail/mail-one.scss
@@ -3,6 +3,7 @@
   background-image: url('../../images/backgroun-mail-one.png');
   background-size: cover;
   position: relative;
+  width: 33.4rem;
   .text-mail-one {
     position: absolute;
     transform: translate(0%, -50%);
