--- a/src/sass/layout/footer.scss
+++ b/src/sass/layout/footer.scss
@@ -170,6 +170,7 @@
   }
   //Logo gatorade
   .img-footer {
+    position: relative;
     order: 1;
     width: 175px;
     margin: 73px auto 47px;
@@ -190,6 +191,11 @@
       height: 30px;
       width: 210px;
       margin: 12px 65px 0 0;
+    }
+    a {
+      position: absolute;
+      width: 100%;
+      height: 100%;
     }
     img {
       width: 100%;
