--- a/src/sass/components/recover-password.scss
+++ b/src/sass/components/recover-password.scss
@@ -12,11 +12,21 @@
 
 // /*---| Recover password |---*/
 .recover-password {
-  //Button
-  .link {
-    font-family: $g-black;
-    font-size: 1.1rem;  
-    margin: 15px auto;
-    text-decoration: none;
+  .box-form-rocovery{
+    form .title-form h2 {
+      @media(min-width: 1024px) {
+        font-size: 5rem;
+      }
+      @media(min-width: 2000px) {
+        font-size: 6rem;
+      }
+    }
+    //Button
+    .link {
+      font-family: $g-black;
+      font-size: 1.1rem;  
+      margin: 15px auto;
+      text-decoration: none;
+    }
   }
 }
