--- a/src/sass/components/principal-slider.scss
+++ b/src/sass/components/principal-slider.scss
@@ -48,6 +48,7 @@
       left: 0;
     }
   }
+  .carlosm,
   .slick-prev {
     position: absolute;
     left: 50%;
@@ -57,6 +58,7 @@
     transform: rotate(-90deg) translate(0%, -50%);
     z-index: 30;
     visibility: hidden;
+    display: none !important;
     @media(min-width: 1024px) {
       visibility: visible;
     }
@@ -75,6 +77,16 @@
       left: 0;
     }
   }
+  .paso {
+    display: flex !important;
+    z-index: 9999;
+    a {
+      width: 3rem;
+      height: 4rem;
+      position: absolute;
+      z-index: 9999999;
+    }
+  } 
   .slick-list {
     height: 100vh;
     min-height: 568px;
