--- a/src/sass/components/benefits.scss
+++ b/src/sass/components/benefits.scss
@@ -87,6 +87,11 @@
         .gatsby-image-wrapper {
           width: 100%;
           height: 100%;
+          picture {
+            img {
+              filter: grayscale(1);
+            }
+          }
         }
       }
     }
