--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -103,7 +103,7 @@
       @media(min-width: 1024px) {
         position: absolute;
         left: 55%;
-        top: 28%;
+        top: 30%;
         font-size: 5rem;
         line-height: 0.8;
         span {
@@ -142,6 +142,7 @@
       @media(min-width: 1024px) {
         height: 34vw !important;
         width: 34vw !important;
+        transform: translateY(-14%);
       }
     }
   }
@@ -153,7 +154,7 @@
       flex: 0 0 50%;
       padding-left: 5.4%;
       position: relative;
-      margin-top: 6rem;
+      margin-top: 9%;
     }
     .decription-title {
       padding: 1rem;
@@ -289,6 +290,27 @@
       margin: 0;
     }
   }
+  .button-qr {
+    width: 2.8rem;
+    height: 3.5rem;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 93%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(90deg);
+    a {
+      width: 100%;
+      height: 100%;
+      &::before {
+        content: "";
+        position: absolute;
+        background-image: url('../../images/arrow-right.png');
+        width: 2.8rem;
+        height: 3.5rem;
+        background-repeat: no-repeat;
+      }
+    }
+  }
 }
 
 
@@ -343,7 +365,7 @@
           @media(min-width: 1024px) {
             object-position: left;
           }
-        }   
+        }
       }
     }
     .lateral-left {
@@ -730,7 +752,7 @@
           min-width: 25rem;
         }
         .unit {
-          text-align: center;    
+          text-align: center;
           margin: .6rem 0;
           width: 90vw;
           @media(min-width: 1024px) {
