--- a/src/sass/components/principal-slider.scss
+++ b/src/sass/components/principal-slider.scss
@@ -1,15 +1,20 @@
 /**
- * benefits.scss
+ * principal-slider.scss
  *
  * These styles are from the first carousel.
  *
  * Index
  * - Principal slider 
- *   |- Title
- *   |- Side title
- *   |- Background image
- *   |- Text box
- *     |- Text section
+ *   |- Box Text
+ *     |-Title
+ *     |-Description
+ *     |-Button
+ *     |-Button pass
+ *   |-Background
+ *   |-Image 
+ *     |-First position slider
+ *     |-Second position slider
+*    |-Arrow
 */
 // variable import
 @import "../base/variables";
@@ -25,297 +30,209 @@
   @media(min-width: 1450px){
     min-height: 900px;
   }
-  .slick-next {
-    position: absolute;
-    width: 3rem;
-    height: 4rem;
-    right: 0;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 30;
-    visibility: hidden;
-    @media(min-width: 1024px) {
-      visibility: visible;
-    }
-    &::before {
-      content: "";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      background-image: url("../../images/arrow-right.png");
-      background-repeat: no-repeat;
-      top: 0;
-      left: 0;
-    }
-  }
-  .carlosm,
-  .slick-prev {
-    position: absolute;
-    left: 50%;
-    top: 88%;
-    width: 3rem;
-    height: 4rem;
-    transform: rotate(-90deg) translate(0%, -50%);
-    z-index: 30;
-    visibility: hidden;
-    display: none !important;
-    @media(min-width: 1024px) {
-      visibility: visible;
-    }
-    // @media(min-width: 1024px) {
-    //   left: 75%;
-    //   transform: translate(-50%, -50%);
-    // }
-    &::before {
-      content: "";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      background-image: url("../../images/arrow-left.png");
-      background-repeat: no-repeat;
-      top: 0;
-      left: 0;
-    }
-  }
-  .paso {
-    display: flex !important;
-    z-index: 9999;
-    a {
-      width: 3rem;
-      height: 4rem;
-      position: absolute;
-      z-index: 9999999;
-    }
-  } 
-  .slick-list {
+  .container-principalSlider {
     height: 100vh;
     min-height: 568px;
-    @media(min-width: 1024px) {
-      min-height: 700px;
-    }
-    @media(min-width: 1450px) {
-      min-height: 900px;
-    }
-    .slick-track {
-      height: 100vh;
-      min-height: 568px;
-      @media(min-width: 1024px) {
-        min-height: 700px;
-      }
-      @media(min-width: 1450px) {
-        min-height: 900px;
-      }
-      .slick-slide.slick-active.slick-current {
-        z-index: 10;
-      }
-      .slick-slide {
-        .container-principalSlider {
-          height: 100vh;
-          min-height: 568px;
-          position: relative;
+    position: relative;
+    padding: 0;
+    //Box Text
+    .box-text {
+      padding: 0;
+      .text-prinicpal-slider {
+        width: 300px;
+        margin: 12.5rem 0 0 2rem;
+        @media(min-width: 350px) {
+          margin: 12.5rem 0 0 3.5rem;
+        }
+        @media(min-width: 556px) {
+          margin: 12.5rem 0 0 6rem;
+        }
+        @media(min-width: 768px) {
+          margin: 12.5rem 0 0 7.5rem;
+          width: 600px;
+        }
+        @media(min-width: 1024px) {
+          margin: 12.5rem 0 0 9rem;
+        }
+        @media(min-width: 1350px) {
+          margin: 15.4rem 0 0 6.9rem;
+        }
+        @media(min-width: 1450px) {
+          margin: 20rem 0 0 11rem;
+          width: 650px;
+        }
+        @media(min-width: 2000px) {
+          margin: 30rem 0 0 11rem;
+        }
+            margin: 30rem 0 0 11rem;
+        //Title
+        h2 {
+          font-family: $g-black;
+          font-size: 2.2rem;
+          line-height: 1.1;
+          letter-spacing: -0.5px;
+          text-transform: uppercase;
+          -webkit-text-stroke: 0;
+          color: $white;
+          margin-right: 15px;
+          @media(min-width: 768px) {
+            font-size: 2.5rem;
+          }
           @media(min-width: 1024px) {
-            min-height: 568px;
+            max-width: 30rem;
+            font-size: 3.8rem;
+            line-height: 1;
           }
-          div.image {
-            top:0;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background-color: black;
-            z-index: -10;
-            &::before {
-              content: '';
-              background: url('../../images/bg-pricipal-banner.png') center/cover no-repeat;
-              width: 100%;
-              height: 100%;
-              position: absolute;
-              left: 0;
-              @media(min-width: 768px) {
-                background: url('../../images/bg-pricipal-banner.png') center/cover no-repeat;
-              }
-            }
-            .bg-prinicpal-slider {
-              width: 100%;
-              height: 100%;
-              @media(min-width: 1024px) {
-                height: 120%;
-              }
-            }
+          @media(min-width: 1450px) {
+            max-width: 35rem;
+            font-size: 4.6rem;
           }
-          .text-prinicpal-slider {
-            padding-top: 14rem;
-            padding-left: 6%;
-            width: 80%;
-            @media(min-width: 556px) {
-              width: 27rem;
-              top: 60%;
+        }
+        //Description
+        .description {
+          p {
+            color: $white;
+            font-family: $h-neue;
+            line-height: 1.2;
+            font-size: 1.1rem;
+            margin: 28px 0 0 0;
+            width: 85% ;
+            min-height: 105px;
+            @media(min-width: 768px) {
+              width: 70%;
             }
             @media(min-width: 1024px) {
-              width: 36rem;
-              left: 25%;
-              padding-left: 9rem;
+              margin: 20px 0 0 0;
             }
-            @media(min-width: 1450px) {
-              left: 24%;
-              top: 60%;
-              width: 42rem;
-              padding-left: 11rem;
-            }
-            h2 {
-              top: 10%;
-              text-transform: uppercase;
-              color: white;
-              font-family: $g-black;
-              line-height: 1;
-              font-size: 2.2rem;
-              max-width: 15rem;
-              cursor: text ;
-              @media(min-width: 1024px) {
-                max-width: 30rem;
-                font-size: 3.8rem;
-              }
-              @media(min-width: 1450px) {
-                max-width: 35rem;
-                font-size: 4.6rem;
-              }
-            }
-            p {
-              top: 40%;
-              font-family: 'HelveticaNeue';
-              @media(max-width: 1023px) {
-                width: 88%;
-              }
-              @media(min-width: 1024px) {
-                top: 60%;
-              }
-              p {
-                color: white;
-                font-family: 'HelveticaNeue';
-                line-height: 1.3;
-                font-size: 1.1rem;
-                @media(min-width: 1024px) {
-                  font-size: 1.2rem;
-                  line-height: 1.2;
-                }
-              }
-            }
-            // .link {
-            //   top: 100%;
-            //   left: 50%;
-            //   transform: skewX(-31deg) translate(-50%, -50%);
-            //   @media(min-width: 1024px) {
-            //     top: 90%;
-            //     left: 8%;
-            //     transform: skewX(-31deg) translate(0%, -50%);
-            //   }
-            // }
-            .paraf {
-              padding-top: 2rem;
-              @media(min-width: 1024px) {
-                max-width: 21rem;
-                padding-top: 1rem;
-              }
-              @media(min-width: 1450px) {
-                font-size: 1.4rem;
-                line-height: 1.2;
-                max-width: 29rem;
-              }
-            }
-            .box-button {
-              top: 82%;
-              left: 50%;
-              @media(min-width: 1024px) {
-                top: 82%;
-                left: 5%;
-              }
-              @media(min-width: 1450px) {
-                top: 105%;
-                left: 4%;
-              }
-              .link {
-                margin: auto;
-                @media(min-width: 1024px) {
-                  margin-left: 0;
-                }
-              }
-            }
+          }
+        }
+        //Button
+        .box-button {
+          margin: 50px 0 0 40px;
+          @media(min-width: 768px) {
+            margin: 10px 0 0 0;
           }
         }
       }
-      .slick-slide {
-        &:nth-child(1) {
-          .container-principalSlider {
-            .text-prinicpal-slider {
-              p {
-                color: white;
-              }
-            }
-            .image {
-              .bg-prinicpal-slider {
-                picture {
-                  img {
-                    min-width: 516px;
-                    transform: translateX(17%);
-                    @media(min-width: 556px) {
-                      object-fit: contain !important;
-                    }
-                    @media(min-width: 1024px) {
-                      transform: translateX(20%);
-                    }
-                  }
-                }
-              }
-            }
+      //Button pass
+      .button-pass {
+        position: absolute;
+        top: 88%;
+        left: 50%;
+        transform: rotate(-90deg) translate(0%, -50%);
+        z-index: 30;
+        width: 3rem;
+        height: 4rem;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          background-image: url("../../images/arrow-left.png");
+          background-repeat: no-repeat;
+          width: 100%;
+          height: 100%;
+        }
+        a {
+          position: absolute;
+          width: 3rem;
+          height: 4rem;
+          z-index: 90;
+        }
+      }
+    }
+    // Background
+    .image {
+      position: absolute;
+      top:0;
+      width: 100%;
+      height: 100%;
+      background-color: $black;
+      z-index: -10;
+      padding: 0;
+      &::before {
+        content: '';
+        background: url('../../images/bg-pricipal-banner.png') center/cover no-repeat;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        @media(min-width: 768px) {
+          background: url('../../images/bg-pricipal-banner.png') center/cover no-repeat;
+        }
+      }
+      .bg-prinicpal-slider {
+        width: 100%;
+        height: 100%;
+        @media(min-width: 1024px) {
+          height: 120%;
+        }
+      }
+    }
+  }
+  //Image    
+  .slick-slide {
+    //First position slider
+    &:nth-child(1) {
+      .container-principalSlider {
+        img {
+          min-width: 516px;
+          transform: translateX(17%);
+          @media(min-width: 556px) {
+            object-fit: contain !important;
+          }
+          @media(min-width: 1024px) {
+            transform: translateX(20%);
           }
         }
-        &:nth-child(2) {
-          .container-principalSlider {
-            .text-prinicpal-slider {
-              // margin-left: 55%;
-              // margin-left: 0%;
-              @media(min-width: 1024px) {
-                left: 75%;
-                margin-left: 55%;
-              }
-              h2 {
-                color: black;
-              }
-              .text-one {
-                color: black;
-              }
-              .text-two {
-                p {
-                  color: black;
-                }
-              }
-              // .link.button-second {
-              //   background: black;
-              //   top: 90%;
-              //   left: 50%;
-              //   @media(min-width: 1024px) {
-              //     left: 0;
-              //     top: 80%;
-              //   }
-              //   a {
-              //     color: white;
-              //   }
-              // }
-              p {
-                color: black;
-              }
-            }
-            .image {
-              .bg-prinicpal-slider {
-                picture {
-                  img {
-                    object-fit: cover !important;
-                  }
-                }
-              }
+      }
+    }
+    //Second position slider
+    &:nth-child(2) {
+      .container-principalSlider {
+        .row {
+          flex-direction: row-reverse;
+        }
+        .text-prinicpal-slider {
+          @media(min-width: 1200px) {
+            margin-left: 0;
+          }
+          @media(min-width: 1350px) {
+            margin-left: 7.3rem;
+          }
+          h2 {
+            color: $black;
+          }
+          .description {
+            p {
+              color: $black;
             }
           }
         }
       }
     }
+  }
+  //Arrow
+  .slick-next {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-50%, -50%);
+    z-index: 30;
+    width: 3rem;
+    height: 4rem;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-image: url("../../images/arrow-right.png");
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .slick-prev {
+    display: none !important;
   }
 }
