--- a/src/sass/components/principal-slider.scss
+++ b/src/sass/components/principal-slider.scss
@@ -123,6 +123,10 @@
         z-index: 30;
         width: 3rem;
         height: 4rem;
+        visibility: hidden;
+        @media(min-width: 1024px) {
+          visibility: visible;
+        }
         &::before {
           content: "";
           position: absolute;
@@ -221,6 +225,10 @@
     z-index: 30;
     width: 3rem;
     height: 4rem;
+    visibility: hidden;
+    @media(min-width: 1024px) {
+      visibility: visible;
+    }
     &::before {
       content: "";
       position: absolute;
