--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -69,6 +69,10 @@ header {
         display: flex;
         padding: 0 30px 0 0;
         margin-top: 25px;
+        width: 50%;
+        justify-content: flex-end;
+        height: 65px;
+        align-items: center;
         @media (min-width: 1500px) {
           padding: 0 60px 0 0;
           margin-top: 70px;
@@ -80,6 +84,8 @@ header {
         .link-my-account,
         .link-log-out {
           position: relative;
+          width: 90px;
+          height: 100%;
           &::before {
             content: '';
             width: 100%;
@@ -185,23 +191,73 @@ header {
           &::before {
             background: url('../../images/logo-bottle.png') center/contain no-repeat;
           }
+          &.open::after {
+            width: 15px;
+            height: 15px;
+            border: 2px solid $white;
+            border-radius: 50%;
+            background: green;
+            content: '';
+            position: absolute;
+            top: -3px;
+            right: 0;
+            @media (min-width: 1500px) {
+              top: -5px;
+              right: 12px;
+              width: 18px;
+              height: 18px;
+            }
+          }
+          &.close {
+            &::after {
+              position: absolute;
+              top: -3px;
+              right: 0;
+              width: 15px;
+              height: 15px;
+              border: 2px solid $white;
+              border-radius: 50%;
+              background:$red;
+              content: '';
+              @media (min-width: 1500px) {
+                top: -5px;
+                right: 12px;
+                width: 18px;
+                height: 18px;
+              }
+            }
+          }
         }
         //Icon login close
         .link-log-out {
-          width: 30px;
-          height: 40px;
-          @media (min-width: 1500px) {
-            width: 37px;
-            height: 43px;
+          button {
+            color: $white;
+            line-height: 1;
+            font-family: $px-black;
+            text-transform: uppercase;
+            text-align: left;
+            font-size: 1.175rem;
+            padding: 3px 0 0 0;
+            width: 100%;
+            height: 100%;
+            &:hover {
+              color: $orange_primary;
+            }
           }
-          @media (min-width: 2000px) {
-            width: 45px;
-            height: 50px;
-            ;
-          }
-          &::before {
-            background: url('../../images/logo-user-close.png') center/contain no-repeat;
-          }
+          // width: 30px;
+          // height: 40px;
+          // @media (min-width: 1500px) {
+          //   width: 37px;
+          //   height: 43px;
+          // }
+          // @media (min-width: 2000px) {
+          //   width: 45px;
+          //   height: 50px;
+          //   ;
+          // }
+          // &::before {
+          //   background: url('../../images/logo-user-close.png') center/contain no-repeat;
+          // }
         }
       }
     }
