--- a/src/sass/components/regist.scss
+++ b/src/sass/components/regist.scss
@@ -118,6 +118,20 @@
           input[type=password] {
             text-transform: none;
           }
+          //Text error
+          .text-error {
+            color: $red;
+            padding: 0 12px;
+            font-family: $g-black;
+            font-size: 1.1rem;
+            width: 255px;
+            line-height: 1;
+            text-align: center;
+            margin: 0 auto;
+            @media(min-width: 768px) {
+              letter-spacing: -0.5px;
+            }
+          }
         }
         a {
           color: $white;
