--- a/src/sass/components/fourt-component.scss
+++ b/src/sass/components/fourt-component.scss
@@ -68,7 +68,7 @@
       content: "";
       width: 10%;
       height: 100%;
-      background-color: #FAFAFA;
+      background-color: #EDEDED;
       position: absolute;
       left: 0;
       display: none;
