--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -576,7 +576,6 @@
     position: relative;
     height: auto;
     width: 100%;
-    padding-bottom: 25px;
     @media(min-width: 1024px) {
       display: flex;
       flex-direction: row;
@@ -585,6 +584,11 @@
       justify-content: center;
       align-items: center;
       min-height: 34.4rem;
+    }
+    &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5), &:nth-child(6), &:nth-child(7), &:nth-child(8), &:nth-child(9), &:nth-child(10) {
+      .background-image-ultimate {
+        display: none;
+      }
     }
     .background-image-ultimate {
       height: 100%;
