Styles titles with span

--- a/src/sass/components/fourt-component.scss
+++ b/src/sass/components/fourt-component.scss
@@ -45,7 +45,7 @@
       line-height: .8;
       @media(min-width: 1024px) {
         font-size: 3rem;
-        padding: .1rem 0 0 0.5rem;
+        padding: 0 0 0 0.5rem;
         align-self: flex-start;
       }
     }
