--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -29,6 +29,7 @@
       @media(min-width: 1024px) {
         font-size: 5rem;
         display: flex;
+        line-height: .8;
       }
       span {
         font-family: 'PlexesPro black';
@@ -37,7 +38,7 @@
         -webkit-text-stroke: black;
         font-weight: 100;
         @media(min-width: 1024px) {
-          padding: 0.2rem 0 0 0.5rem;
+          padding: 0 0 0 0.5rem;
           font-size: 3rem;
         }
       }
@@ -58,13 +59,6 @@
           height: 100%;
         }
         .slick-slide {
-          div {
-            // &:nth-child(1) {
-            //   @media(min-width: 1024px) {
-            //     height: 100%;
-            //   }
-            // }
-          }
           .container-slick {
             position: relative;
             @media(min-width: 1024px) {
