--- a/src/sass/components/principal-slider.scss
+++ b/src/sass/components/principal-slider.scss
@@ -35,6 +35,7 @@
     min-height: 568px;
     position: relative;
     padding: 0;
+    z-index: 10;
     //Box Text
     .box-text {
       padding: 0;
