--- a/src/sass/components/regist.scss
+++ b/src/sass/components/regist.scss
@@ -110,11 +110,11 @@
               width: 430px;
             }
           }
-          input[type=number]::-webkit-inner-spin-button,
-          input[type=number]::-webkit-outer-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-          }
+          // input[type=number]::-webkit-inner-spin-button,
+          // input[type=number]::-webkit-outer-spin-button {
+          //   -webkit-appearance: none;
+          //   margin: 0;
+          // }
           input[type=password] {
             text-transform: none;
           }
