--- a/src/sass/components/regist.scss
+++ b/src/sass/components/regist.scss
@@ -85,7 +85,7 @@
            margin-bottom: 30px;
           }
           input,select {
-            height: 43px;
+            height: 38px;
             width: 255px;
             text-align: left;
             font-family: $g-medium;
@@ -93,12 +93,17 @@
             letter-spacing: 1px;
             color: $gray;
             text-align-last: center;
+            text-align: center;
             &::placeholder {
               color: $gray;
               text-transform: uppercase;
             }
+            @media(min-width: 556px) {
+              height: 43px;
+            }
             @media(min-width: 768px) {
               width: 390px;
+              height: 50px;
             }
             @media(min-width: 1024px) {
               text-align: center;
@@ -130,6 +135,18 @@
             margin: 0 auto;
             @media(min-width: 768px) {
               letter-spacing: -0.5px;
+            }
+          }
+          .form-control {
+            padding: 1% 1%;
+            @media(min-width: 556px) {
+              padding: 2% 2%;
+            }
+            @media(min-width: 768px) {
+              padding: 3% 3%;
+            }
+            @media(min-width: 1024px) {
+              padding: 4% 4%;
             }
           }
         }
