--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -610,7 +610,7 @@
       align-items: center;
       min-height: 34.4rem;
     }
-    &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5), &:nth-child(6), &:nth-child(7), &:nth-child(8), &:nth-child(9), &:nth-child(10) {
+    &:nth-child(3), &:nth-child(4), &:nth-child(5), &:nth-child(6), &:nth-child(7), &:nth-child(8), &:nth-child(9), &:nth-child(10) {
       .background-image-ultimate {
         display: none;
       }
