--- a/src/sass/components/buy.scss
+++ b/src/sass/components/buy.scss
@@ -224,6 +224,20 @@
           font-family: $g-black;
           display: block !important;
           flex: 0 0 22.33%;
+          position: relative;
+          // min-width: 100px;
+          @media(min-width: 556px) {
+
+          }
+          @media(min-width: 768px) {
+            max-width: 170px;
+          }
+          @media(min-width: 1024px) {
+            
+          }
+          @media(min-width: 1450px) {
+            
+          }
           input {
             font-size: 6rem;
             background: transparent;
@@ -232,12 +246,66 @@
             text-align: center;
             font-size: 3rem;
             font-family: $px-black;
+            padding-top: 1rem;
+            min-width: 116px;
+            @media(min-width: 556px) {
+              min-width: 140px;
+            }
           }
           // input[type=number]::-webkit-inner-spin-button,
           // input[type=number]::-webkit-outer-spin-button {
           //   -webkit-appearance: unset;
           //   margin: 5px;
           // }
+          .container-arrows {
+            z-index: 999999;
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            .minus1 {
+              transform: scale(1.5);
+              z-index: 999999;
+              &::before {
+                content: "";
+                position: absolute;
+                width: 30px;
+                height: 30px;
+                background-image: url(../../images/avance-rapido-up.svg);
+                background-repeat: no-repeat;
+                z-index: 999999;
+                cursor: pointer;
+                transform: translate(-50%, -50%);
+                left: 15%;
+                top: 42%;
+                @media(min-width: 556px) {
+                  
+                }
+                @media(min-width: 556px) {}
+                @media(min-width: 556px) {}
+                @media(min-width: 556px) {}
+              }
+            }
+            .minus2 {
+              transform: scale(1.2);
+              z-index: 999999;
+              &::before {
+                content: "";
+                position: absolute;
+                width: 30px;
+                height: 30px;
+                background-image: url(../../images/avance-rapido-down.svg);
+                z-index: 999999;
+                cursor: pointer;
+                transform: translate(-50%, -50%);
+                top: 42%;
+                right: -13%;
+                @media(min-width: 556px) {}
+                @media(min-width: 556px) {}
+                @media(min-width: 556px) {}
+                @media(min-width: 556px) {}
+              }
+            }
+          }
         } 
         //Error field
         .text-error {
@@ -281,3 +349,49 @@
     }
   }
 }
+
+
+
+// div.minus1 {
+// 	width: 50px;
+// 	height: 50px;
+// 	box-sizing: border-box;
+// 	// position: absolute;
+// 	left: 50%;
+// 	top: 50%;
+// 	transform: rotate(-45deg);
+//   color: transparent;
+// 	&::before {
+// 		content: '';
+// 		width: 100%;
+// 		height: 100%;
+// 		border-width: .8vmin .8vmin 0 0;
+// 		border-style: solid;
+// 		border-color: #fafafa;
+// 		transition: .2s ease;
+// 		display: block;
+// 		transform-origin: 100% 0;
+// 	}
+// 	&:after {
+// 		content: '';
+// 		float: left;
+// 		position: relative;
+// 		top: -100%;
+// 		width: 90%;
+// 		height: 100%;
+// 		border-width: 0 3px 0 0;
+// 		border-style: solid;
+// 		border-color: #fafafa;
+// 		transform-origin: 100% 0;
+// 		transition:.2s ease;
+// 	}
+// 	&:hover::after {
+// 		transform: rotate(45deg);
+// 		border-color: orange;
+// 		height: 120%;
+// 	}
+// 	&:hover::before {
+// 		border-color: orange;
+// 		transform: scale(.8);
+// 	}
+// }
