Style form profile

--- a/src/sass/components/regist.scss
+++ b/src/sass/components/regist.scss
@@ -191,5 +191,34 @@
         }
       }
     }
+    input[type='date']{
+      color:transparent;
+      position: relative;
+      &.not-empty{
+        &:after{
+        z-index: -1;
+        color: transparent;
+        }
+      }
+    }
+    input[type='date']:after {
+        color: #656161;
+        content: attr(placeholder);
+        width: 100%;
+        position: absolute;
+        background: white;
+        left: 0;
+        padding: 4% 1%;
+        top: 0;
+        height: 100%;
+    }
+    
+    input[type='date']:focus{
+      color: black;
+      &:after{
+        z-index: -1;
+        color: transparent;
+      }
+    }
   }
 }
