--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -123,32 +123,32 @@ html {
 }
 
 
-input[type='date']{
-  color:transparent;
-  position: relative;
-  &.not-empty{
-    &:after{
-    z-index: -1;
-    color: transparent;
-    }
-  }
-}
-input[type='date']:after {
-    color: #656161;
-    content: attr(placeholder);
-    width: 100%;
-    position: absolute;
-    background: white;
-    left: 0;
-    padding: 4% 1%;
-    top: 0;
-    height: 100%;
-}
+// input[type='date']{
+//   color:transparent;
+//   position: relative;
+//   &.not-empty{
+//     &:after{
+//     z-index: -1;
+//     color: transparent;
+//     }
+//   }
+// }
+// input[type='date']:after {
+//     color: #656161;
+//     content: attr(placeholder);
+//     width: 100%;
+//     position: absolute;
+//     background: white;
+//     left: 0;
+//     padding: 4% 1%;
+//     top: 0;
+//     height: 100%;
+// }
 
-input[type='date']:focus{
-  color: black;
-  &:after{
-    z-index: -1;
-    color: transparent;
-  }
-}
+// input[type='date']:focus{
+//   color: black;
+//   &:after{
+//     z-index: -1;
+//     color: transparent;
+//   }
+// }
