--- a/src/sass/components/regist.scss
+++ b/src/sass/components/regist.scss
@@ -72,8 +72,9 @@
     .form-register {
       padding: 36px 19px;
       text-align: center;
-      .text-error {
-        color: $red;
+      //Text success
+      .text-success {
+        color: green;
         padding: 0 12px;
         font-family: $g-black;
         font-size: 1.1rem;
