style button my buy add button nine in variables

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -171,5 +171,12 @@ $data_buttons: (
     first_color: $white,
     second_color: $white,
     data_query: 'seven'
+  ),
+  'nine': (
+    principal_bg: $black,
+    secondary_bg: $orange_primary,
+    first_color: $white,
+    second_color: $white,
+    data_query: 'seven'
   )
 );
