--- a/src/sass/components/buy.scss
+++ b/src/sass/components/buy.scss
@@ -46,37 +46,47 @@
       margin: 205px 0 0 0;
     }
     //Title
-    h2 {
-      line-height: 1;
-      color: $white;
-      -webkit-text-stroke: unset;
-      max-width: 13rem;
-      margin: auto;
-      font-size: 2.1rem;
-      flex-direction: column;
-      display: flex;
-      span {
-        font-size: 2.9rem;
-      }
-      @media(min-width: 992px) {
+    .text-title {
+      h2 {
+        line-height: 1;
+        color: $white;
+        -webkit-text-stroke: unset;
+        // max-width: 13rem;
+        margin: auto;
+        font-size: 2.1rem;  
+        flex-direction: column;
         display: flex;
-        height: 1rem;
-        max-width: 16rem;
-        flex-direction: row;
-        max-width: 9rem;
+        justify-content: center;
         span {
-          color: #ff4700;
-          margin-right: 1rem;
-          font-size: 2.1rem;
+          font-size: 2.9rem;
         }
-      }
-      @media (min-width: 1450px) {
-        font-size: 6rem;
-        max-width: 23rem;
-        span {
+        @media(min-width: 992px) {
+          display: flex;
+          height: 1rem;
+          // max-width: 16rem;
+          flex-direction: row;
+          font-size: 5.5rem;
+          span {
+            color: #ff4700;
+            margin-right: 1rem;
+            font-size: 5.5rem;
+          }
+        }
+        @media(min-width: 1200px) {
+          font-size: 7rem;
+          span{
+            font-size: 7rem;
+          }
+        }
+        @media (min-width: 1450px) {
           font-size: 6rem;
+          // max-width: 23rem;
+          span {
+            font-size: 6rem;
+          }
         }
       }
+
     }
     //Img
     .image-gatorade {
@@ -88,9 +98,8 @@
       img {
         height: 100%;
         margin: -20px 0 0 0;
-        @media(min-width: 992px) {
-          height: 43rem;
-          object-fit: cover;
+        @media(min-width: 576px) {
+          margin: 1.5rem 0 0 0;
         } 
       }
     }
@@ -103,6 +112,14 @@
       margin: 205px 0 0 0;
     }
     form {
+      @media(min-width: 545px) {
+        margin: 20px auto;
+        width: 515px;
+      }
+      @media(min-width: 1340px) {
+        margin: 20px auto;
+        width: 650px;
+      }
       .select-button {
         display: flex;
         flex-wrap: wrap;
@@ -147,11 +164,14 @@
             margin: 2px 0 0 0;
             letter-spacing: 4px;
             @media(min-width: 992px) {
-              font-size: 7rem;
+              font-size: 5.5rem;
               line-height: 0.8;
               color: $white;
               overflow: hidden;
               height: 85px;
+            }
+            @media(min-width: 1200px) {
+              font-size: 7em;
             }
           }
           .form-check  {
