--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -134,17 +134,21 @@
         justify-content: center;
       }
       @media(min-width: 1024px) {
-        min-width: 46vw;
-        max-width: 46vw;
+        min-width: 52vw;
+        max-width: 52vw;
         position: absolute;
       }
       h3.welcome-name {
-        word-break: break-all;
+        word-break: initial;
         font-size: 4.3rem;
         line-height: 0.8;
         text-transform: uppercase;
         color: white;
         font-weight: 500;
+        text-align: center;
+        @media(min-width: 1024px) {
+          text-align: left;
+        }
         @media(min-width: 1450px) {
           font-size: 4.5rem;
         }
@@ -162,6 +166,9 @@
       position: relative;
       width: unset;
       padding-left: 7.7rem;
+    }
+    @media(max-width: 1024px) {
+      padding-top: 4rem;
     }
     canvas {
       margin: auto;
