--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -314,15 +314,32 @@ header {
       width: 85vw;
       position: absolute;
       transform: translateY(-50%);
-      top: 40%;
+      top: 46%;
       @media (min-width: 360px) {
+      }
+      li {
+        &.logout-mobile, &#logout-mobile {
+          text-align: center;
+          margin-top: 5rem;
+          button {
+            font-size: 1rem;
+            text-decoration: underline;
+            letter-spacing: 0px;
+            color: white;
+            text-transform: uppercase;
+            font-family: $px-black;
+            br {
+              display: none;
+            }
+          }
+        }
       }
     }
     li {
       width: 100%;
       margin: 0;
     }
-    a {
+    a, button {
       text-decoration: none;
       color: $white;
       transition: color 300ms;
